# TechnicalReserves

./: duoxiancheng.cxx  version.c  version.cc
IPC/: 123  456  README.md  get_msgquenue.c  pv.c  pv.h  sem_read_write.c  set_msgqueue.c  shm_wr.c
Nuclear_Masses/: Decay.cc  SimulateADecay.cpp
ROOT/: fillrandom.C  hardsize.cc  sechi.cc  tree.cxx  wugui.cc
UDP/: c.c  ccc  s.c  sss
chuankou/: main.cc  test1.cc  test2.cc  test3.cc  test4.cc
clock/: 123  main.cc
g4数据暂存/: input.cc
gnuplot/: 123  PlotData.txt  main.cc  test.cc
jsoncpp/: 123  456  reader.cc  testjson.json  writer.cc
mpi/: 111  test1.cc
ncurses/: 123  example.cc  example1.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example7.cc  example8.cc
openMP/: 123  main.cc
readline/: 123  main.cc
string/: test.cc  标准C++中的string类的用法.cc
thread/: 000  111  456  aaa  bbb  detach.cc  joinable.cc  lock.cc  sleepfor.cc  sleepuntil.cc  sleepuntil.cc~  thread.cc  thread.cc~  thread0.cc  thread0.cc~
try_catch/: main.cpp  zxcv.cpp
writefile/: CMakeLists.txt  User.cc  User.hh  global.hh  main.cc
二进制存储结构/: 123  main.cc
判断文件是否存在/: 123  main.cc
压缩解压缩/: 123  zxcvbnm.cc
字符串与数字相互转换/: 123  main.cc  sstream.cc
打开文本多次写入/: CMakeLists.txt  CMakeLists.txt~  input.cc
指针/: diwuzhang513.cc  main.cc
文件夹的创建和删除/: 123  main.cc
文件操作/: 123  456  a.txt  close.cc  creat.cc  fcntl.cc  flock.cc  fsync.cc  lessk.cc  mainCopy.cc  mkstemp.cc  open.cc  read.cc  remove.cc  rename.cc  sync.cc  write.cc
断言/: 123  main.cc
获取目录下所有文件名/: 123  mian.cc
调用系统命令/: 123  B4.root  B4000.root  B4_t0.root  (+2 more)
(+307 files in other folders)
